--- a/src/app/pages/Admin/products/admin-product-list/admin-product-list.component.css
+++ b/src/app/pages/Admin/products/admin-product-list/admin-product-list.component.css
@@ -1,12 +1,13 @@
 .container.mt-4 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+  
 }
 
 h3 {
   font-size: 2rem;
   font-weight: 700;
-  color: #343a40;
+  color: #fdfeff;
   margin-bottom: 1.5rem;
 }
 
