--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -32,6 +32,37 @@
               >Dashboard
             </a>
           </li>
+          
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              routerLink="/admin/orders"
+              routerLinkActive="active"
+            >
+              <i data-lucide="shopping-cart" class="me-1 icon-small"></i>Orders
+            </a>
+          </li>
+
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              routerLink="/admin/customers"
+              routerLinkActive="active"
+            >
+              <i data-lucide="users" class="me-1 icon-small"></i>Customers
+            </a>
+          </li>
+
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              routerLink="/admin/categories"
+              routerLinkActive="active"
+            >
+              <i data-lucide="shopping-cart" class="me-1 icon-small"></i>Categories
+            </a>
+          </li>
+
           <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
@@ -66,26 +97,9 @@
             </ul>
           </li>
 
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              routerLink="/admin/orders"
-              routerLinkActive="active"
-            >
-              <i data-lucide="shopping-cart" class="me-1 icon-small"></i>Orders
-            </a>
-          </li>
 
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              routerLink="/admin/customers"
-              routerLinkActive="active"
-            >
-              <i data-lucide="users" class="me-1 icon-small"></i>Customers
-            </a>
-          </li>
         </ul>
+        
 
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
